--- a/eProject/eProject.csproj
+++ b/eProject/eProject.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Areas\Admin\Controllers\WarehouseEquipmentController.cs" />
     <Compile Include="Auth\AuthManager.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\BillController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
@@ -248,6 +249,7 @@
       <DependentUpon>NexusModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\ViewModels\Account\AccountViewModel.cs" />
+    <Compile Include="Models\ViewModels\Bill\BillEditModel.cs" />
     <Compile Include="Models\ViewModels\CallCharge\CallChargeViewModel.cs" />
     <Compile Include="Models\ViewModels\CustomerFeedback\CustomerFeedbackViewModel.cs" />
     <Compile Include="Models\ViewModels\CustomerFeedback\FeedbackReplyModel.cs" />
@@ -322,6 +324,7 @@
     <Content Include="Content\Css\AdminCss\Service\Edit.css" />
     <Content Include="Content\Css\AdminCss\Service\Index.css" />
     <Content Include="Content\Css\AdminCss\RetailShowRoom\AddRetailStore.css" />
+    <Content Include="Content\Css\Bill\List.css" />
     <Content Include="Content\Css\Customer\EditInformation.css" />
     <Content Include="Content\Css\Customer\EditPassword.css" />
     <Content Include="Content\Css\Customer\MyConnections.css" />
@@ -461,6 +464,7 @@
     <Content Include="Areas\Admin\Views\Bill\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Bill\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Charge\Add.cshtml" />
+    <Content Include="Areas\Admin\Views\Charge\Edit.cshtml" />
     <None Include="packages.config" />
     <Content Include="web.config" />
     <Content Include="Views\Shared\Partials\Header.cshtml" />
@@ -482,6 +486,7 @@
     <Content Include="Views\Customer\MyConnections.cshtml" />
     <Content Include="Views\Account\Feedback.cshtml" />
     <Content Include="Views\Account\Detail.cshtml" />
+    <Content Include="Views\Bill\List.cshtml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
